fix: Fix item text alignment

--- a/src/components/TaskItem/styles.module.css
+++ b/src/components/TaskItem/styles.module.css
@@ -17,7 +17,9 @@
 
 .container > div {
   flex: 1;
+
   display: flex;
+  align-items: center;
 }
 
 .taskTitle {
